<resources>
    <string name="app_name">FitnessApp</string>
    <string name="Title">Fitness App</string>
    <string name="UserName">Username</string>
    <string name="PassWord">Password</string>
    <string name="SignIn">Log In</string>
    <string name="CreateUser">Create New User</string>
    <string name="ErrorMessage">Error</string>
    <string name="Home">home</string>
    <string name="Log">log</string>
    <string name="Plan">plan</string>
    <string name="Exercise">exercise</string>
    <string name="Completed">Complete</string>
    <string name="Add">add</string>
    <string name="Delete">delete</string>
    <string name="Notification">Notification</string>
    <string name="Done">Done</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="protip_spot">Protip Spot</string>
    <string name="add_exercise">Add Exercise</string>
</resources>
