<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/Title"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/UserName" />

    <EditText
        android:id="@+id/PassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="181dp" />

    <Button
        android:id="@+id/CreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateUser" />

    <TextView
        android:id="@+id/ErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ErrorMessage"
        android:textSize="24sp"
        android:visibility="invisible" />

</LinearLayout>