<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Home7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Home" />

        <Button
            android:id="@+id/btn_Home8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Log" />

        <Button
            android:id="@+id/add_exercise_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_exercise" />

    </LinearLayout>

    <TextView
        android:id="@+id/temp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/protip_spot"
        android:textSize="25sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_exercise_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/exercise_item" />

</LinearLayout>